                     CHANGES version 5.8

           This file summarizes changes made since 5.0


Version 5.8

New: Monit no longer purge the environment for sub-processes

New: Add command line option to view Monit ID (-i/--id)

New: Add command line option to reset Monit ID (-r/--resetid)

New: Process UID, EUID and GID tests. Allows to test if the
process is running as given user. Example:
    check process syslog with pidfile /var/run/rsyslogd.pid
        if failed uid  "syslog" then alert
        if failed euid "syslog" then alert
        if failed gid  "syslog" then alert

New: Add WebSocket protocol test support for port check. Example:
    check host websocket.org with address "echo.websocket.org"
        if failed port 80 protocol websocket
            host "echo.websocket.org"
            request "/"
            origin "http://www.websocket.com"
            version 13
        then alert

New: Simplified HTTP protocol test to allow testing content without 
creating an URL object. It is now possible to say in a more natural way,
 check host mmonit.com with address mmonit.com
       if failed port 80 protocol http
          and request /monit/ with content = "Monit 5.7"
       then alert
meaning that if the page mmonit.com/monit does not contain the text
"Monit 5.7" then the test will fail. To reverse the test, i.e. to test
that the page should not contain a specific string simply use '!=' 
instead, like,
    if failed port 80 protocol http with content != "Nagios" then alert
Remember also that the string to test can be a regular expression

Fixed: https://bitbucket.org/tildeslash/monit/issue/7/enable-optimized-error-with-flag-ofast


Version 5.7

New: Merged https://bitbucket.org/tildeslash/monit/pull-request/1/
from Philippe Kueck:
1) Handle sockets (unix domain) as regular files when checking timestamp.
2) Use mysql 4.1 protocol in MySQL check, required for checking mysql-proxy
3) Skip connection checks during startup timeout.
